# MicroShop

./: crud.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_11_03_1258-1af270f776ab_create_user_table.py  2024_11_03_1535-ebb5d3fd5ef2_create_post_table.py  2024_11_03_1601-c4f3b56c0d0c_create_profile_table.py  2024_11_07_1515-169e29e9f5f5_create_order_table.py  2024_11_08_1622-938830d8afbf_create_order_product_association_table.py  2024_11_08_1824-acff5f7962f5_qweqw.py  2024_11_10_1714-c92f547e57ae_qweqwasdd.py  2024_11_10_1725-6ee8334d0b79_clear_all_database.py  2024_11_10_1740-c7ebd511afaf_add_count_column_to_order_product_.py  2024_11_11_1630-8d5c67e6e3c7_add_unit_price_column_to_order_product_.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
src/: items_views.py  main.py
src/users/: crud.py  schemas.py  views.py
