[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Artem Creator"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "0.20.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
psycopg2 = "^2.9.10"
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
alembic = "^1.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
